[package]
name = "duplicate-explorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
digest = "0.10.7"
sha2 = "0.10.8"
walkdir = "2.4.0"
winwalk = "0.2.2"
